Fix html anchors being overlapped by fixed header
When jumping to a link anchor the target itself is not visible
because it is overlapped by the fixed header. This change introduces
an invisible gap on top of anchors to have some offset here.

--- a/docs/_sass/overrides.scss
+++ b/docs/_sass/overrides.scss
@@ -393,3 +393,9 @@ html[data-scroll="0"] {
         box-shadow: none;
     }
 }
+
+:target {
+    padding-top: $header-height;
+    margin-top: -$header-height;
+    display: inline-block;
+}
